12/02/2007
greebo
- Added Entity Selection Mode Toggle to limit mouse operations to entities.
- Added Flip X / Flip Y texture commands.
- Fixed Scale Manipulator for brushes.
- Entity List Selection now focuses the camera and orthoviews on the selected entity.

11/02/2007
greebo
- Added ability to cancel transformation operations by hitting ESC.

08/02/1007
OrbWeaver
- Added GUI to edit background image, accessed from View menu
- Fixed crash when loading a .BAK copy of a map file
- Changing an entity keyvalue now correctly sets the "map modified" flag

29/01/2007
greebo
- Added option to show a background image in orthoviews.
- Camera position is saved and restored upon map load.

** RELEASE 0.8.1

28/01/2007
OrbWeaver
- Fixed crash when SkinChooser displayed for an AI rather than a static model.
- Fixed assertion failure when shutting down after browsing some textures in the
  Media Browser.
greebo
- Fixed assertion failure when switching render modes while freelook mode was
  active.
- Fixed inability to display Entity Inspector due to double-binding of the
  shortcut.

** RELEASE 0.8.0

26/01/2007
OrbWeaver
- Fixed leaks in saved maps caused by use of "_emptyname" instead of "_default"

20/01/2007
greebo
- Added shortcut editor / refactored command & event system

06/01/2007
OrbWeaver
- Added skin chooser dialog for entity inspector, allows selection of arbitrary
  skins for a model.

05/01/2007
OrbWeaver
- Fixed bug causing parse failure of .mtr files with recursive map expressions.
greebo
- Multiple orthogonal views can now be created.

15/12/2006
OrbWeaver
- Added Light Inspector.

07/12/2006
greebo
- Added draggable projected lights.
- Improve patch texturing, allows "natural" projection to match the surface of
  the patch

25/11/2006
OrbWeaver
- Entity chooser now uses a key in the DEF to specify a container folder, for
  full hierarchical organisation of entities.

** RELEASE 0.7.1

24/11/2006
OrbWeaver