@@ -1,3 +1,7 @@
+13/02/2007
+greebo
+- Added "Patch Thicken" feature.
+
 12/02/2007
 greebo
 - Added Entity Selection Mode Toggle to limit mouse operations to entities.
